# HOPP

./: .env-example  .gitignore  .readthedocs.yaml  .readthedocs.yml  2030_SETO_targets.json  CHANGELOG.md  CONTRIBUTING.md  GAMS_combine_csv_files.py  LCA_green_steel_ammonia.py  LCA_green_steel_ammonia_LBW_locations.py  LCA_green_steel_ammonia_ProFAST.py  LCA_single_scenario.py  LCA_single_scenario_ProFAST.py  LCOH_capacityfactor_plotting.py  LCOH_stacked_area.py  LICENSE  Notebook_Ex01.ipynb  Notebook_Ex02.ipynb  Notebook_Ex03.ipynb  Notebook_Ex04.ipynb  Notebook_Ex05.ipynb  Notebook_Ex06.ipynb  README.md  RELEASE.md  SAM_default_costs.json  SMR_steel_ammonia_run_scenarios.py  clustering.py  conda_build.sh  deg_vs_nodeg_comparison_barchart.py  dispatch_plotting.py  distributed_pipe_cost_analysis.py  dynamic_voltage_model.py  environment.yml  filtered_site_details_1_lats_1_lons_2020_resourceyear  filtered_site_details_50_lats_95_lons_2013_resourceyear  filtered_site_details_50_lats_95_lons_2013_resourceyear.csv  filtered_site_details_50_lats_95_lons_2013_resourceyear_full.csv  filtered_site_details_5_lats_5_lons_2013_resourceyear  filtered_site_details_5_lats_9_lons_2013_resourceyear  filtered_site_details_TX_GA_UT.csv  (+81 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
.github/workflows/: ci.yml  ci_docs.yml  conda_build.yml  (+3 more)
ProFAST/: InternalUseTermsForDownloadableSoftware-ProFAST.docx  __init__.py
alt_dev/: Price Stats.ipynb  Updating Financial Scenario.ipynb  cache-analysis.ipynb  optimization_driver_alt.py  optimization_problem_alt.py  para_dev.py  post_dev.py  run_alt.py  scratch.py
conda.recipe/: meta.yaml
defaults/: battery_singleowner.py  defaults_data.py  flatirons_site.py  genericsystem_singleowner.py  geothermal_singleowner.py  grid_none.py  pv_singleowner.py  site_info.py  wind_singleowner.py
docs/: CONTRIBUTING.md  _config.yml  _toc.yml  binder.md  citing_hopp.md  citing_hopp.rst  conf.py  index.rst  installation.md  installation.rst  intro.md  requirements.txt
docs2/: _config.yml  _toc.yml  binder.md  citing_hopp.rst  installation.rst  references.bib
examples/: 01-wind-solar.ipynb  02-wind-solar-api.ipynb  03-wind-solar-battery.ipynb  04-load-following-battery.ipynb  05-floris-wake-model.ipynb  06-wave-wind.ipynb  07-load-following-heuristic-dispatch.ipynb  07-wind-solar-electrolyzer.ipynb  08-distributed-residential-example.ipynb  08-wind-solar-battery-profast.ipynb  09-distributed-midsize-example.ipynb  09-green-steel.ipynb  10-offshore-green-hydrogen.ipynb  10-tidal-battery.ipynb  As_Built_Analysis_Blue Creek.csv  Blue_Creek_Analysis.py  ColoradoPowerflowAnalysis.py  H2 Baseline Future Scenarios.csv  H2 Baseline Future Scenarios_IOWA.csv  H2 Baseline Future Scenarios_Optimals.csv  H2 Baseline Future Scenarios_Optimals_Future_Iowa.csv  H2 Baseline Future Scenarios_SOUTHEAST.csv  H2AModel.py  H2_Analysis_Fort Stewart.csv  H2_Analysis_IOWA.csv  H2_Analysis_Iowa Lakes.csv  H2_Analysis_NSA Midsouth.csv  H2_Analysis_Plainview Bioenergy - Texas.csv  H2_Analysis_Seven Mile Hill - Wyoming.csv  H2_Analysis_Southeast.csv  HOPP_scenario_validation.ipynb  README.md  TEST.csv  curtail.csv  default_financial_parameters.json  dudgeon_wind_extraction_validation.py  flicker.py  h2_analysis.py  h2_analysis_DODNSA.py  h2_analysis_IOWA.py  (+32 more)
floris_input_files/: floris_input.yaml  floris_input12MW_osw.yaml  floris_input15MW_base.yaml  floris_input15MW_osw.yaml  floris_input15MW_osw_singleT.yaml  floris_input15MW_singleT.yaml  floris_input18MW_osw.yaml  floris_input4MW_lbw.yaml  floris_input6MW_lbw.yaml  floris_input8MW_lbw.yaml  floris_input_Site1.yaml  floris_input_Site1_gridconnected.yaml  floris_input_Site2.yaml  floris_input_Site2_gridconnected.yaml  floris_input_Site2_offgrid.yaml  floris_input_Site3.yaml  floris_input_Site3_gridconnected.yaml  floris_input_Site3_offgrid.yaml  floris_input_Site4.yaml  floris_input_Site4_gridconnected.yaml  floris_input_Site4_offgrid.yaml  floris_input_Site5.yaml  floris_input_Site5_gridconnected.yaml  floris_input_Site5_offgrid.yaml  lbw_4MW.yaml  lbw_6MW.yaml  lbw_8MW.yaml  osw_12MW.yaml  osw_15MW.yaml  osw_18MW.yaml
greenheart/: __init__.py  openmdao.py
hopp/: __init__.py  battery.py  csp_source.py  detailed_pv_plant.py  grid.py  hybrid_simulation.py  keys.py  logging_manager.py  mhk_wave_source.py  power_source.py  pv_plant.py  pv_source.py  reopt.py  tower_plant.py  tower_source.py  trough_plant.py  trough_source.py  type_dec.py  utility_rate.py  version.py  wind_source.py
hybrid/: PEM_H2_LT_electrolyzer.py  PEM_electrolyzer_IVcurve.py  battery.py  battery_stateless.py  calc_power_losses.py  clustering.py  controls.py  csp_source.py  detailed_pv_plant.py  dispatch.py  dispatch_old.py  dispatch_plotting.py  grid.py  hopp.py  hybrid_dispatch.py  hybrid_simulation.py  hybrid_system.py  keys.py  layout_tools.py  log.py  main_dispatch_pySAMbattery.py  openmdao_wrapper.py  optimize_MP.py  optimizer_base.py  plot_tools.py  power_source.py  pv_source.py  reopt.py  reopt_dev.py  resource.py  run_power_losses.py  sample_wind_electricity_profile.csv  scenario.py  site_info.py  solar_source.py  storage.py  systems_behavior.py  tower_source.py  trough_source.py  turbine_layout_tools.py  (+3 more)
parameters/: BOSSummaryResults.json  bos_json_lookup.py  parameter_data.py  parameter_utils.py  size_pv_array.py
power_electronics/: component_sizing_and_powerFlow.py  hard_coded_PE_losses.py  power_electronic_info.py
resource_files/: 27.47951771428572_-97.471915_windtoolkit_2013_60min_160m_200m.srw  39.45927706122449_-112.33704117021276_windtoolkit_2013_60min_160m_200m.srw  site_details.csv
script_debug_output/: README
tests/: __init__.py  conftest.py  financial_generic_test.json  test_SolarWindOptimizationProblem.py  test_geothermal.py  test_grid.py  test_layout_opt.py  test_optimizer_MP.py  test_optimizer_base.py  test_reopt.py  test_resource_download.py  test_scenario.py  test_solar_wind.py  test_storage.py  test_utility_rate.py  test_wind.py
tools/: hopp_tools.py  utils.py
(+40931 files in other folders)
